welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: value and is not a member of Boolean
    while (isFacingTrail() and !porteBiscuit()) {
                           ^